Add configurable expiration time + endpoint to list invitation tokens